# Seeku

./: LICENSE  README.md  package.json  pnpm-lock.yaml  svelte.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/powershell/: search.ps1
src-tauri/src/: history_manager.rs  lib.rs  searcher.rs
src/lib/: commandHandler.ts  constants.ts  history_manager.ts  i18n.ts  keyboardHandlers.ts  listViewLogic.ts  searchLogic.ts  searcher.ts  types.ts  windowLogic.ts
src/lib/icons/: fileicon.svelte  foldericon.svelte
src/lib/locales/: en.json  ja.json
src/routes/: +page.module.css  +page.svelte
