[package]
name = "Seeku"
version = "0.0.1"
description = "Seeku — Fast, Minimal, Effective"
authors = ["weizlogy"]
license = "MIT"
repository = "https://github.com/weizlogy/Seeku"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
tauri = { version = "2.5.1", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
